fix: overflow of product listing and detail pages

--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 0.75rem;
   margin-bottom: 2rem;
   height: 10vh;
   display: flex;
