--- a/src/Components/ProductCard/ProductCard.module.css
+++ b/src/Components/ProductCard/ProductCard.module.css
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid #e5e5e5;
-  width: 100%;
-  height: 100%;
-  padding-bottom: 0.75rem;
+  max-width: 100%;
+  max-height: 100%;
   background-color: white;
   padding: 1rem 0.75rem;
 }
