--- a/src/Pages/Products/Products.module.css
+++ b/src/Pages/Products/Products.module.css
@@ -1,6 +1,8 @@
 .card_container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  /* grid-template-columns: repeat(2, 1fr); */
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  max-width: 100%;
 }
 
 .products {
